# slim

./: .gitignore  Berksfile  Gemfile  Guardfile  README.md  Vagrantfile  build.sh
ProjLibre Timeline/: Slim Robot Proj Timeline.pod
ProjectLibre Timeline/: Slim Robot Proj Timeline.pod
blob_detector/: 0 usefull Cpp funcs.cpp  0 usefull Cpp funcs.cpp~  0 usefull Cpp funcs.txt~  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Object_H&S_ranges.ods  blob  blobDetector.cpp  blobDetector.cpp~  cmake_install.cmake  colorWheelHSV  color_conversion.h~  hsv commands.txt~  next on  next on~
blob_detector/cvblob/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  cvBlobConfig.cmake  cvblob.pc
blob_detector/old junk files/: blobDetector (semi junk).cpp  blobDetector works with cvtColor.cpp  blobDetector_old.cpp  hsv commands.txt
blob_detector/z old junk files/: blobDetector 2014.03.14.cpp  blobDetector.cpp  color_conversion (copy).cpp  rgbToGray.cpp
cad/: assembly.fcstd
cad/drafts/: assembly_not_cube.FCStd
cad/ian parts/: ArmMountSlidePlate.FCStd  ArmMountSlidePlate.FCStd1  (+21 more)
cvblob/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  cvBlobConfig.cmake  install_manifest.txt
cvblob/samples/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  redObject  red_object_tracking (orig).cpp  red_object_tracking.cpp~
notes/: ServoAngles.ods  git.md  shelf_dimensions.txt
ops/: bootstrap.sh
ros/: README.md  sourceme.bash
slim_gazebo/: CMakeLists.txt
(+233 files in other folders)
